# Postech

./: .gitignore  README.md  main.py  requirement.txt
.devcontainer/: devcontainer.json
challenges/2_ibov/: README.md  requirements.txt
challenges/2_ibov/code/bronze/: proccess_investing_data.ipynb  process_investing_data.ipynb
challenges/2_ibov/code/gold/: proccess_investing_data.ipynb  process_investing_data.ipynb
challenges/2_ibov/code/silver/: Tech_Challenge_2_NAIVE.ipynb  proccess_investing_data.ipynb  process_investing_data.ipynb
challenges/2_ibov/data/gold/: gold.parquet
challenges/3_covid19/: README.md  docker-compose.yml  requirements.txt
challenges/3_covid19/docs/: dicionario_pnad_covid.xlsx
challenges/4_obesity/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
challenges/4_obesity/docs/: project_description.md
challenges/5_data/: README.md  pyproject.toml  requirements.txt
challenges/5_data/code/notebook/bronze/: ingest_data.ipynb
challenges/5_data/code/notebook/gold/: sistema_de_recomendacao.ipynb  sistema_de_recomendacao_alterado.ipynb  sistema_de_recomendacao_final.ipynb
challenges/5_data/code/notebook/silver/: notebooks_joins.ipynb  parser_json.ipynb  process_data.ipynb  process_silver.ipynb  talent_pool_notebook.ipynb
challenges/5_data/code/streamlit/: README_job_fit.md  app.py  candidate_mapping.json  requirements.txt  requirements_job_fit.txt  talent_pool_final.parquet  talent_pool_sample.parquet  talent_vectorizer.pkl  utils.py
challenges/5_data/docs/: design.excalidraw
(+91 files in other folders)
